# cartesify-jokenpo-avail

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  shell.nix
backend/: Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  schema.ts
backend-rs/: Cargo.toml  build.sh
backend-rs/src/: lib.rs
backend/src/: Challenge.ts  index.ts
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  Challenges.tsx  CreateChallenge.tsx  ListChallenges.tsx  constants.ts  main.tsx  util.ts
